<resources>
    <string name="app_name">text</string>
    <string name="strname">Name</string>
    <string name="strheight">Height</string>
    <string name="strweight">Weight</string>
    <string name="strsubmit">Submit</string>
    <string name="strnextpage">nextPage</string>
    <string name="strshowbmi">Your BMI value is</string>
    <string name="strtoolow">too low</string>
    <string name="strtoohigh">too high</string>
    <string name="strstd">good</string>
</resources>
